[package]
name = "edge-net"
version = "0.6.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "network"]
description = "no_std and no-alloc async implementations of various network protocols."
repository = "https://github.com/ivmarkov/edge-net"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.75"

[patch.crates-io]
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc", branch = "rust-stable" }

[features]
default = ["io"]
std = ["edge-http/std", "edge-captive/std", "edge-mdns/std", "edge-mqtt", "edge-std-nal-async"]
io = ["edge-captive/io", "edge-dhcp/io", "edge-http/io", "edge-mdns/io", "edge-raw/io", "edge-ws/io", "embedded-nal-async-xtra"]
nightly = []
embedded-svc = ["edge-http/embedded-svc", "edge-mqtt/embedded-svc", "edge-ws/embedded-svc"]

[dependencies]
edge-captive = { workspace = true }
edge-dhcp = { workspace = true }
edge-http = { workspace = true }
edge-mdns = { workspace = true }
edge-mqtt = { workspace = true, optional = true }
edge-raw = { workspace = true }
edge-ws = { workspace = true }
edge-std-nal-async = { workspace = true, optional = true }
embedded-nal-async-xtra = { workspace = true, optional = true }

[dev-dependencies]
anyhow = "1"
simple_logger = "2.2"

[[example]]
name = "captive_portal"
required-features = ["std", "domain"]

[[example]]
name = "simple"
required-features = ["std"]

[[example]]
name = "http_client"
required-features = ["std"]

[[example]]
name = "http_server"
required-features = ["std"]

[workspace]
members = [
    ".",
    "edge-captive",
    "edge-dhcp",
    "edge-http",
    "edge-mdns",
    "edge-mqtt",
    "edge-raw",
    "edge-ws",
    "edge-std-nal-async",
    "embedded-nal-async-xtra"
]

[workspace.dependencies]
embassy-futures = { version = "0.1", default-features = false }
embassy-sync = { version = "0.5", default-features = false }
embassy-time = { version = "0.2", default-features = false }
embedded-io-async = { version = "0.6", default-features = false }
embedded-nal-async = { version = "0.7", default-features = false }
embedded-svc = { version = "0.26", default-features = false }
log = { version = "0.4", default-features = false }
heapless = { version = "0.8", default-features = false }
no-std-net = { version = "0.6", default-features = false }
domain = { version = "0.9.3", default-features = false, features = ["heapless"] }
octseq = { version = "0.3.2", default-features = false }

edge-captive = { version = "0.1.0", path = "edge-captive", default-features = false }
edge-dhcp = { version = "0.1.0", path = "edge-dhcp", default-features = false }
edge-http = { version = "0.1.0", path = "edge-http", default-features = false }
edge-mdns = { version = "0.1.0", path = "edge-mdns", default-features = false }
edge-mqtt = { version = "0.1.0", path = "edge-mqtt", default-features = false }
edge-raw = { version = "0.1.0", path = "edge-raw", default-features = false }
edge-ws = { version = "0.1.0", path = "edge-ws", default-features = false }
edge-std-nal-async = { version = "0.1.0", path = "edge-std-nal-async", default-features = false }
embedded-nal-async-xtra = { version = "0.1.0", path = "embedded-nal-async-xtra", default-features = false }
