[package]
name = "edge-captive"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Async + `no_std` + no-alloc implementation of a Captive Portal DNS"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
    "asynchronous",
    "networking",
    "dns"
]

[features]
default = ["io"]
std = ["io"]
io = ["embedded-nal-async"]

[dependencies]
log = { workspace = true }
domain = { workspace = true }
octseq = { workspace = true }
embedded-nal-async = { workspace = true, optional = true }