[package]
name = "edge-captive"
version = "0.3.0"
edition = "2021"
rust-version = "1.77"
description = "Async + `no_std` + no-alloc implementation of a Captive Portal DNS"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std::no-alloc",
    "asynchronous",
    "network-programming",
]

[features]
default = ["io"]
std = ["io"]
io = ["edge-nal"]

[dependencies]
log = { workspace = true }
domain = { workspace = true }
edge-nal = { workspace = true, optional = true }