[package]
name = "edge-http"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = ["io"]
std = ["io"]
io = ["embedded-io-async", "embedded-nal-async", "embedded-nal-async-xtra", "embassy-sync", "embassy-futures"]

[dependencies]
embedded-io-async = { workspace = true, optional = true }
embedded-nal-async = { workspace = true, optional = true }
embedded-nal-async-xtra = { workspace = true, optional = true }
embedded-svc = { workspace = true, optional = true, default-features = false }
heapless = { workspace = true }
log = { workspace = true }
no-std-net = { workspace = true }
embassy-sync = { workspace = true, optional = true }
embassy-futures = { workspace = true, optional = true }
httparse = { version = "1.7", default-features = false }
base64 = { version = "0.13", default-features = false }
sha1_smol = { version = "1", default-features = false }
