[package]
name = "edge-mdns"
version = "0.5.0"
edition = "2021"
description = "Async + `no_std` + no-alloc implementation of an mDNS responder"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std::no-alloc",
    "asynchronous",
    "network-programming",
]

[features]
default = ["io"]
std = ["io"]
io = ["embassy-futures", "embassy-sync", "embassy-time", "edge-nal"]

[dependencies]
log = { workspace = true }
heapless = { workspace = true }
domain = { workspace = true }
embassy-futures = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
edge-nal = { workspace = true, optional = true }
