[package]
name = "edge-mqtt"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["embedded-svc?/std", "rumqttc"]
nightly = ["embedded-svc?/nightly"]

[dependencies]
rumqttc = { version = "0.19", optional = true }
log = { workspace = true }
embedded-svc = { workspace = true, optional = true, default-features = false }
