[package]
name = "edge-mqtt"
version = "0.3.0"
edition = "2021"
rust-version = "1.77"
description = "Implements the embedded-svc MQTT traits on top of the rumqttc crate"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "asynchronous",
    "network-programming",
]

[dependencies]
rumqttc = "0.23"
log = { workspace = true }
embedded-svc = { workspace = true, optional = true, default-features = false, features = ["std"] }
