[package]
name = "edge-nal-embassy"
version = "0.5.0"
edition = "2021"
rust-version = "1.83"
description = "An implementation of edge-nal based on `embassy-net`"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std::no-alloc",
    "asynchronous",
    "network-programming",
]

[features]
default = ["proto-ipv4", "proto-ipv6", "medium-ethernet", "dns", "udp", "tcp", "multicast"]
defmt = ["dep:defmt", "heapless/defmt-03", "embassy-net/defmt"]
proto-ipv4 = ["embassy-net/proto-ipv4"]
proto-ipv6 = ["embassy-net/proto-ipv6"]
medium-ethernet = ["embassy-net/medium-ethernet"]
medium-ip = ["embassy-net/medium-ip"]
dns = ["embassy-net/dns"]
udp = ["embassy-net/udp"]
tcp = ["embassy-net/tcp"]
multicast = ["embassy-net/multicast"]

[dependencies]
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "0.3", optional = true }
embedded-io-async = { workspace = true }
edge-nal = { workspace = true }
heapless = { workspace = true }
embassy-net = "0.7"
embassy-futures = { workspace = true }
