[package]
name = "edge-nal-std"
version = "0.2.0"
edition = "2021"
rust-version = "1.77"
description = "A STD implementation of edge-nal based on `async-io`"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
    "asynchronous",
    "networking"
]

[features]
default = ["async-io"]

[dependencies]
embedded-io-async = { workspace = true, features = ["std"] }
edge-nal = { workspace = true }
async-io = { version = "2", optional = true }
async-io-mini = { git = "https://github.com/ivmarkov/async-io-mini", optional = true }
futures-lite = "1"
libc = "0.2"
heapless = { workspace = true }
