[package]
name = "edge-nal-std"
version = "0.3.0"
edition = "2021"
rust-version = "1.77"
description = "A STD implementation of edge-nal based on `async-io`"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
    "asynchronous",
    "networking"
]

[dependencies]
embedded-io-async = { workspace = true, features = ["std"] }
edge-nal = { workspace = true }
async-io = "2"
async-io-mini = { version = "0.2", optional = true }
futures-lite = "2"
libc = "0.2"
heapless = { workspace = true }
