[package]
name = "edge-raw"
version = "0.2.0"
edition = "2021"
rust-version = "1.77"
description = "Async + `no_std` + no-alloc implementation of IP and UDP packet creation and parsing"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
    "asynchronous",
    "networking",
    "ip"
]

[features]
default = ["io"]
std = ["io"]
io = ["embedded-io-async", "edge-nal"]

[dependencies]
log = { workspace = true }
embedded-io-async = { workspace = true, default-features = false, optional = true }
edge-nal = { workspace = true, default-features = false, optional = true }
