[package]
name = "edge-tcp"
version = "0.1.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "network"]
description = "TCP traits for edge-net"
repository = "https://github.com/ivmarkov/edge-net"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-io.workspace = true
embedded-io-async.workspace = true
no-std-net.workspace = true