[package]
name = "edge-ws"
version = "0.5.0"
edition = "2021"
rust-version = "1.77"
description = "Async + `no_std` + no-alloc implementation of the Websockets protocol"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std::no-alloc",
    "asynchronous",
    "network-programming",
    "web-programming::websocket"
]

[features]
default = ["io"]
std = ["io"]
io = ["embedded-io-async"]
defmt = ["dep:defmt", "embedded-svc?/defmt"]

[dependencies]
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "0.3", optional = true }
embedded-io-async = { workspace = true, optional = true }
embedded-svc = { workspace = true, optional = true, default-features = false }
